//
//  AccessibilityIdentifiers.swift
//  Stargazers
//
//  Created by Davide Mazzoni on 14/12/20.
//

import Foundation

// MARK: - Repository Form
enum RepositoryFormAxIdentifiers: String {
    case owner
    case name
}

// MARK: - Stargazer List
enum StargazerListAxIdentifiers: String {
    case loginButton
    case searchButton
}
